syntax.txt
statement   : declaration
            : compare

declaration : KEYWORD:LET IDENTIFIER EQUAL assignment
            : KEYWORD:LET IDENTIFIER

assignment  : IDENTIFIER EQUAL compare
            : compare

compare     : (compare (DOUBLE_EQUAL|BANG_EQUAL|LESS_THAN|LESS_THAN_EQUAL|GREATER_THAN|GREATER_THAN_EQUAL))* expr

expr        : term ((PLUS|MINUS) term)*

term        : factor ((ASTERISK|F_SLASH|DOUBLE_F_SLASH) factor)*

factor      : (PLUS|MINUS) factor
            : exponent

exponent    : atom (DOUBLE_ASTERISK factor)?

atom        : BANG atom
            : NUMBER
            : IDENTIFIER
            : OPEN_PAREN assignment CLOSE_PAREN
